# draw-rectangles

./: README.md  docker-compose.yml
backend/: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
backend/src/: constants.py  dummy.py  main.py
backend/src/model/: models.py
backend/src/server/: app.py  mutate.py  object.py  query.py  schema.py
frontend/: .env  .eslintrc.json  README.md  package-lock.json  package.json
frontend/src/components/button/: Button.module.css  index.tsx
frontend/src/components/canvas/: Canvas.module.css  enums.ts  index.tsx
frontend/src/components/sidebar/: Sidebar.module.css  index.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: Home.module.css
